# StakeForge

./: .dockerignore  Containerfile  README.md  Taskfile.yml  pyproject.toml  why.md
docs/: 00-visual-summary.md  01-overview.md  02-architecture.md  03-installation.md  04-workflow-ingest-to-prompt.md  05-hybrid-retrieval.md  06-evaluation-and-rubric.md  07-dolt-and-reproducibility.md  08-examples-catalog.md  09-podman-taskfile.md  10-structured-persona-rubric.md  README.md
examples/: README.md  canvas.md
examples/conversations/: 2026-03-kickoff-maria.md
examples/eval/: README.md  cases.full.jsonl  cases.pushback.jsonl  interview_cfo_notes_with_eval.md  interview_with_eval_frontmatter.md  sample_cases.jsonl
examples/eval/replies/: cfo-budget-pushback-1.txt  demo-roi-1.txt  maria-interview-roi.txt
examples/stakeholders/: cfo_jordan_lee.md  maria_chen.md
spec/: README.md  release-1-prompt-mvp-tinytroupe.md  release-2-pageindex-duckdb-rag.md  release-3-agentic-judge.md
src/stakeforge/: citations.py  cli.py  dolt.py  duckdb_store.py  eval_extract.py  eval_llm_rubric.py  eval_models.py  eval_run.py  eval_scorer.py  markdown_passages.py  models.py  pageindex_adapter.py  paths.py  persona_load.py  persona_schema.py  prompt.py  retrieve.py  runtime.py  store.py
